AP-39 - AdminLogs - fixed word overflow issue.
Updated webpack config.

--- a/src/Modules/Manage/Dnn.PersonaBar.AdminLogs/AdminLogs.Web/src/components/AdminLog/style.less
+++ b/src/Modules/Manage/Dnn.PersonaBar.AdminLogs/AdminLogs.Web/src/components/AdminLog/style.less
@@ -9,6 +9,7 @@
                             margin: 0px 10px 10px 58px;
                             * {
                                 white-space: normal;
+                                word-break: break-word;
                             }
                         }
                         .logHeader-wrapper {
@@ -144,9 +145,11 @@
                             margin: 0px 6px 0 6px;
                         }
                         .logContainer {
-                            margin: 10px 20px 10px 20px;
-                            border: solid 1px #ddd;
+                            padding: 10px 20px 10px 20px;
                             float: left;
+                        }
+                        .logContainerBox {
+                            border: solid 1px #ddd;
                         }
                         .toolbar {
                             border-bottom: solid 1px #ddd;
